--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "prebuild": "vue-tsc --build --force",
-    "build:prd": "npm run build -- --base https://tkadyear.github.io/ip-address-tracker/",
+    "build:prd": "npm run build -- --base https://github.com/vwdr/IP-Tracker/",
     "build": "vite build",
     "preview": "vite preview",
     "lint:check": "eslint . --ext .vue,.ts --ignore-path .gitignore",
